Added some new hooks
