# server/swagger/swagger_docs.json
@@ -448,6 +448,19 @@
           }
         }
       }
+    },
+    "/getLatestProducts": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
